<?xml version="1.0" encoding="utf-8"?><resources>
    <string name="app_name">安卓演示应用</string>
    <string name="title">EMAS</string>
    <string name="test">test</string>
    <string name="ttid">600002222033</string>
    <string name="bundle_title">
        业务Bundle范例:
    </string>
    <string name="sdk_title">
        EMAS SDK入口:
    </string>
    <string name="sdks_guide">
        EMAS SDK介绍：\n
        1、高可用SDK: \n 提供统一的、轻量的、全方位的端上高可用运维SDK，包括性能分析、数据统计\n\n
        2、WEEX: \n 移动端动态化渲染的解决方案，提供业务快速迭代发布的能力\n\n
        3、DEXPATCH: \n 提供基于ATLAS的快速修复线上问题能力\n\n
        4、动态部署: \n 提供用户无感知的应用升级能力\n\n
    </string>
    <string name="weex_home1">WEEX多TAB首页</string>
    <string name="weex_home2">WEEX首页</string>
    <string name="weex_detail">WEEX详情页</string>
    <string name="weex_tab_size">4</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="tab4">Tab4</string>
    <string name="tab5">Tab5</string>
</resources>