<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bundle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/color_text_333"
            android:text="@string/bundle_title" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goto_bundle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:layout_marginRight="8dp"
                android:text="Frist Bundle" />

            <Button
                android:id="@+id/goto_bundle1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:text="Second Bundle" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_bg_two"/>

        <TextView
            android:id="@+id/sdk_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/color_text_333"
            android:text="@string/sdk_title" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/config"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:text="应用配置信息" />

            <Button
                android:id="@+id/ha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:layout_marginRight="8dp"
                android:text="高可用sdk" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mtop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:layout_marginRight="8dp"
                android:text="MTOP网关SDK" />

            <Button
                android:id="@+id/accs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:text="ACCS长连SDK" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/orange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:layout_marginRight="8dp"
                android:text="Orange配置SDK" />

            <Button
                android:id="@+id/update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:text="本地动态部署" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dexpatch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:layout_marginRight="8dp"
                android:text="本地Dexpatch" />

            <Button
                android:id="@+id/man"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_bg_one"
                android:text="数据分析SDK"
                android:textColor="@color/color_text_blue"
                android:visibility="visible"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/agoo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_text_blue"
                android:background="@color/color_bg_one"
                android:layout_marginRight="8dp"
                android:text="推送服务" />

            <Button
                android:id="@+id/other"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_bg_one"
                android:text="数据分析SDK"
                android:textColor="@color/color_text_blue"
                android:visibility="invisible"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_test"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/color_text_333"
                android:text="新加按钮" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/test1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@color/color_bg_one"
                    android:text="业务1"
                    android:textColor="@color/color_text_blue"
                    />

                <Button
                    android:id="@+id/test2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bg_one"
                    android:textColor="@color/color_text_blue"
                    android:layout_weight="1"
                    android:text="业务2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/test3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@color/color_bg_one"
                    android:text="业务3"
                    android:textColor="@color/color_text_blue" />

                <Button
                    android:id="@+id/test4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bg_one"
                    android:textColor="@color/color_text_blue"
                    android:layout_weight="1"
                    android:text="业务4" />
            </LinearLayout>

        </LinearLayout>
        <!--android:layout_marginBottom="8dp"-->
        <TextView
            android:id="@+id/tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/color_text_333"
            android:background="@color/color_bg_two"
            android:text="@string/sdks_guide" />

        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:layout_weight="0.1"
            android:gravity="bottom"
            android:background="@color/color_bg_two"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/color_text_333"
                android:text="version" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/channel_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/color_text_333"
                android:text="version" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>